...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ix1-cc-NTs">
                                <rect key="frame" x="0.0" y="44" width="375" height="0.0"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NY Times Most popular" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vwu-9S-otO">
                                        <rect key="frame" x="71.5" y="-13" width="232.5" height="26"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                                            <outlet property="titleLabel" destination="iOX-6X-TDk" id="Uux-5M-A0f"/>
                                            <segue destination="MTF-6U-R75" kind="show" identifier="goToDetails" id="llZ-nX-fWg"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="articlesListingTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="CuT-6a-5c6" id="MmK-dX-gtD"/>
                                    <outlet property="delegate" destination="CuT-6a-5c6" id="ksO-J2-APy"/>
                                </connections>
                            </tableView>
...
